# rt-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
shader/: shader.frag
src/: config.h  main.cpp
src/engine/: engine.cpp  engine.h
src/glContext/: buffer.cpp  buffer.h  shader.cpp  shader.h  window.cpp  window.h
src/logger/: logger.cpp  logger.h
src/object/: color.cpp  color.h  cube.cpp  cube.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  quad.cpp  quad.h  triangle.cpp  triangle.h  vertice.h
src/shaders/: shader.frag  shader.vert
